Refactor governance API
