# api/errors.go
@@ -99,6 +99,9 @@ var (
 	ErrBlockchainBacklogLength = errors.New("failed to get backlog length from blockchain")
 	ErrBlockchainNetworkInfo   = errors.New("failed to get network info from blockchain")
 	ErrBlockchainGenesisTime   = errors.New("failed to get genesis time from blockchain")
+	// Governance...
+	// ErrPrepareProposal is returned when preparation of a governance proposal fails for some reason.
+	ErrPrepareProposal = errors.New("prepare proposal failure")
 )
 
 // errorMap contains a mapping between errors and Vega numeric error codes.
